# OpenMneti

./: 404.html  LICENSE.txt  README.md  index.html  sitemap.xml
contributing/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
license/: index.html
open_mneti/: .gitignore  MANIFEST.in  manage.py  mkdocs.yml  pyproject.toml
open_mneti/OpenMneti/: asgi.py  settings.py  urls.py  wsgi.py
open_mneti/docs/: contributing.md  index.md  license.md  packaging.md
open_mneti/docs/getting-started/: configuration.md  installation.md
open_mneti/docs/usage/: api-reference.md  overview.md
packaging/: index.html
search/: search_index.json
usage/api-reference/: index.html
usage/overview/: index.html
